--- a/백업/index.html
+++ b/백업/index.html
@@ -21,7 +21,7 @@
       history.pushState = undefined;
     
       CONFIG.webServerPort = 8200; // 새병원 서버포트로 수정
-      CONFIG.defaultBoxName = 'KkajiServer';
+      CONFIG.defaultBoxName = 'Kkaji';
 
       //BROWSER_CONFIG.host = 'bloom.beauty-care.co.kr'; // 새병원 네임서버 이름으로 수정
       BROWSER_CONFIG.host = 'localhost';
