--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>Kkaji</title>
   </head>
   <body>
-    <p>hello Kkaji world</p>
+  	<header>
+  		<div>
+  			<button id="add_kkaji">+</button>
+  		</div>
+  	</header>
+    <article>
+    	<div>
+    		<div class="kkaji_item">
+    			<div class="item_catagory">일정</div>
+    			<div class="item_title">리포트 마감</div>
+    			<div class="item_duedate">-20</div>
+    		</div>
+    		<div class="kkaji_item">
+    			<div class="item_catagory">일정</div>
+    			<div class="item_title">리포트 마감</div>
+    			<div class="item_duedate">-20</div>
+    		</div>
+    		<div class="kkaji_item">
+    			<div class="item_catagory">일정</div>
+    			<div class="item_title">리포트 마감</div>
+    			<div class="item_duedate">-20</div>
+    		</div>
+    	</div>
+    </article>
+    <footer>
+    	
+    </footer>
   </body>
 </html>
